권한 추가 및 Crashlytics 로그 추가

--- a/churchOfLove/en.lproj/InfoPlist.strings
+++ b/churchOfLove/en.lproj/InfoPlist.strings
@@ -8,3 +8,4 @@
 "CFBundleDisplayName" = "churchOfLove";
 "CFBundleName" = "churchOfLove";
 "NSPhotoLibraryUsageDescription" = "This app requires access to the photo libraray.";
+" NSPhotoLibraryAddUsageDescription" = "This app requires access to the photo libraray.";
