앱아이콘/스플레시 이미지 변경 카메라/갤러리 저장 권한 문구 변경 앱이름변경

--- a/churchOfLove/en.lproj/InfoPlist.strings
+++ b/churchOfLove/en.lproj/InfoPlist.strings
@@ -7,5 +7,6 @@
 */
 "CFBundleDisplayName" = "churchOfLove";
 "CFBundleName" = "churchOfLove";
-"NSPhotoLibraryUsageDescription" = "This app requires access to the photo libraray.";
-" NSPhotoLibraryAddUsageDescription" = "This app requires access to the photo libraray.";
+//"NSCameraUsageDescription" = "churchOfLove wolud you like to use your camera?";
+"NSPhotoLibraryUsageDescription" = "churchOfLove wolud you like to use your photo libraray??";
+"NSPhotoLibraryAddUsageDescription" = "churchOfLove wolud you like to use your photo libraray?";
